fdo#82858 RTF export: fix "none" line style of TextFrames

Regression from commit 9e6a5b94e00f0054b058dbb42c2c0b6c75236c9d
(RtfAttributeOutput::FormatBox: export line{Color,Width} shape
properties, 2013-04-15), in case lineColor is written, but there is no
border style, then an explicit fLine=0 property is needed, otherwise a
black border shows up.

(cherry picked from commit f824b1b575dbdb2bc515656a66cbb94764031a44)

Change-Id: I6d6eedbc8d3ee4bee0f2aadb51a376c7734c6640
Reviewed-on: https://gerrit.libreoffice.org/12185
Reviewed-by: Michael Stahl <mstahl@redhat.com>
Tested-by: Michael Stahl <mstahl@redhat.com>