sw/qa/extras/rtfexport/rtfexport.cxx
@@ -661,6 +661,12 @@ DECLARE_RTFEXPORT_TEST(testFdo79599, "fdo79599.rtf")
 
 #endif
 
+DECLARE_RTFEXPORT_TEST(testFdo82858, "fdo82858.docx")
+{
+    // This was table::BorderLineStyle::SOLID, exporter failed to write explicit no line when line color was written.
+    CPPUNIT_ASSERT_EQUAL(table::BorderLineStyle::NONE, getProperty<table::BorderLine2>(getShape(1), "TopBorder").LineStyle);
+}
+
 CPPUNIT_PLUGIN_IMPLEMENT();
 
 /* vim:set shiftwidth=4 softtabstop=4 expandtab: */
